Truncate long issue titles

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,6 +24,7 @@ $green: #43a047;
 $blue: #3f51b5;
 $purple: #9c27b0;
 $brown: #795548;
+
 /*******************************************************************************
                                 NAVIGATION
 *******************************************************************************/
@@ -190,6 +191,12 @@ $brown: #795548;
   margin: 0;
 }
 
+.issueHeading {
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
 /*******************************************************************************
                                 HANDY COLOR CLASSES
 *******************************************************************************/
@@ -209,15 +216,4 @@ $brown: #795548;
 
 .commentBox p {
   margin: 0;
-}
-
-/*******************************************************************************
-                                HANDY COLOR CLASSES
-*******************************************************************************/
-.background {
-  background-color: $background-color;
-}
-
-.highlight {
-  background-color: $highlight-color;
 }
